<?xml version="1.0"?>
<package>
  <name>swiftnav_piksi</name>
  <version>0.0.2</version>
  <description>
    swiftnav_piksi is a package that provides a ROS driver for the Swift Navigation Piksi
    module. The Piksi module provides an RTK differential GPS solution that under best
    conditions provides the location of a rover relative to a base station with an
    accuracy of around 2cm. The swiftnav_piksi driver publishes this location on
    standard ROS topics.
  </description>

  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/yei_tss_usb</url> -->

  <author email="logans@cottsay.net">Scott K Logan</author>
  <author email="cbjamo@gmail.com">Caleb Jamison</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>libswiftnav</build_depend>
  <build_depend>libsbp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>libswiftnav</run_depend>
  <run_depend>libsbp</run_depend>
</package>
